--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
 	--theme: #15a884;
+	--dark: #222222;
 }
 
 #castells {
@@ -8,7 +9,7 @@
 
 #castells .castell {
 	float: left;
-	height: 50px;
+	height: 55px;
 	width: calc(25% - 20px);
 	text-align: center;
 	margin: 10px;
@@ -37,7 +38,7 @@
 
 html, body {
 	margin: 0;
-	background-color: white;
+	background-color: var(--dark);
 	font-family: 'Arial';
 }
 
@@ -60,10 +61,10 @@ h1 {
 }
 
 .castell h3 {
-	color: gray;
-	font-size: 1em;
+	color: lightgray;
+	font-size: 1.1em;
 	margin: 0;
 }
 .castell h3 span {
-	font-size: 0.7em;
+	font-size: 0.75em;
 }
