--- a/src/style.css
+++ b/src/style.css
@@ -3,16 +3,12 @@
 	--dark: #222222;
 }
 
-#castells {
-	margin-top: 20px;
-}
-
 #castells .castell {
 	float: left;
 	height: 55px;
 	width: calc(25% - 20px);
 	text-align: center;
-	margin: 10px;
+	margin: 0 10px 20px 10px;
 }
 
 @media (max-width: 250px) {
@@ -42,7 +38,7 @@ html, body {
 	font-family: 'Arial';
 }
 
-h1 {
+#castells h1 {
 	color: var(--theme);
 	font-size: 2.5em;
 	text-align: center;
@@ -51,25 +47,25 @@ h1 {
 
 #castells .wrap {
 	display: flow-root;
-	margin: 50px 5%;
 }
 
-.castell h2 {
+#castells .castell h2 {
 	color: var(--theme);
 	font-size: 1.5em;
 	margin: 0;
 }
 
-.castell h3 {
+#castells .castell h3 {
 	color: lightgray;
 	font-size: 1.1em;
 	margin: 0;
 }
-.castell h3 span {
+#castells .castell h3 span {
 	font-size: 0.75em;
 }
 
-hr {
+#castells hr {
 	border-color: var(--theme);
 	width: 30%;
+	margin-bottom: 60px;
 }
